syntax = "proto3";

package com.dipper.proto.rpc;

option java_package = "com.dipper.proto.rpc";
option java_outer_classname = "GroupUserProto";
option java_multiple_files = true;

service GroupUserService {
}

message GroupUserPro {
    int32 id = 1;
    int32 user_id = 2;
    int32 group_id = 3;
    string join_time = 4;
}