package com.dipper.proto.constant;

public interface RpcCommonConstant {

    String MERAK_SERVICE = "dipper-merak";
    String PHECDA_SERVICE = "dipper-phecda";


    int RESULT_OK = 200;
    int RESULT_FAIL = 400;
    int RESULT_NULL = 500;
    String RESULT_SUCCESS_STR = "SUCCESS";
    String RESULT_FAIL_STR = "FAIL";
    String RESULT_FAIL_NULL = "NULL";


    String FRIEND = "FRIEND";
    String FRIEND_MESSAGE = "FRIEND_MESSAGE";
    String FRIEND_TYPE = "FRIEND_TYPE";
    String GROUP = "GROUP";
    String GROUP_USER= "GROUP_USER";
    String USER = "USER";
}
